# SubgraphMatching

./: CMakeLists.txt  LICENSE  README.md
configuration/: CMakeLists.txt  config.h  types.h
graph/: CMakeLists.txt  graph.cpp  graph.h
matching/: BuildTable.cpp  BuildTable.h  CMakeLists.txt  EdgeListToCSR.cpp  EvaluateQuery.cpp  EvaluateQuery.h  FilterVertices.cpp  FilterVertices.h  GenerateFilteringPlan.cpp  GenerateFilteringPlan.h  GenerateQueryPlan.cpp  GenerateQueryPlan.h  GraphConverter.cpp  ReassignLabel.cpp  SelectEdge.cpp  StudyPerformance.cpp  matchingcommand.cpp  matchingcommand.h
test/: expected_output.res  test.py
test/data_graph/: HPRD.graph
test/query_graph/: query_dense_16_1.graph  query_dense_16_10.graph  query_dense_16_100.graph  query_dense_16_101.graph  query_dense_16_102.graph  query_dense_16_103.graph  query_dense_16_104.graph  query_dense_16_105.graph  query_dense_16_106.graph  query_dense_16_107.graph  query_dense_16_108.graph  query_dense_16_109.graph  query_dense_16_11.graph  query_dense_16_110.graph  query_dense_16_111.graph  query_dense_16_112.graph  query_dense_16_113.graph  query_dense_16_114.graph  query_dense_16_115.graph  query_dense_16_116.graph  query_dense_16_117.graph  query_dense_16_118.graph  (+178 more)
utility/: CMakeLists.txt  QFliter.h  bitsetoperation.cpp  bitsetoperation.h  commandparser.cpp  commandparser.h  computesetintersection.cpp  computesetintersection.h  graphoperations.cpp  graphoperations.h  pretty_print.h
utility/han/: intersection_algos.cpp  intersection_algos.hpp
utility/han/utils/: util.cpp  util.hpp
(+2 files in other folders)
